[metadata]
name = pynd
author = Dougal Matthews
author-email = dougal@dougalmatthews.com
summary = Searching in Python
description-file = README.rst
home-page = https://github.com/d0ugal/pynd
license = Apache License, Version 2.0
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development
    Topic :: Utilities
keywords =
    ast
    grep
    search

[files]
packages =
    pynd

[entry_points]
console_scripts =
    pynd = pynd.__main__:main

[wheel]
universal = 1
